# gep-a2a-negotiator

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  config.example.yml  messages.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_node_lifecycle.py  02_solve_task.py  03_swarm_decomposition.py
src/auto_message_discord/: __init__.py  ai.py  bot.py  cli.py  config.py  messages.py
src/gep_a2a_negotiator/: __init__.py  __main__.py  cli.py  client.py  node.py  publish.py  swarm.py  task.py
tests/: test_ai.py  test_assets.py  test_canonical.py  test_client.py  test_config.py  test_messages.py  test_publisher.py
