[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gep-a2a-negotiator"
version = "1.0.0"
description = "Python SDK for the EvoMap Agent-to-Agent (A2A) network — node lifecycle, GEP publishing, task bounty hunting, and swarm orchestration."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "caobao-eth"}]
keywords = ["evomap", "a2a", "gep", "agent", "negotiator", "bounty", "swarm"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
gep-negotiator = "gep_a2a_negotiator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
